<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculatorConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sevenButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            app:layout_constraintBottom_toBottomOf="@+id/eightButton"
            app:layout_constraintEnd_toStartOf="@+id/eightButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/eightButton" />

        <Button
            android:id="@+id/eightButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            app:layout_constraintBottom_toBottomOf="@+id/nineButton"
            app:layout_constraintEnd_toStartOf="@+id/nineButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sevenButton"
            app:layout_constraintTop_toTopOf="@+id/nineButton" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="104dp"
            android:focusable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fourButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            app:layout_constraintBottom_toBottomOf="@+id/fiveButton"
            app:layout_constraintEnd_toStartOf="@+id/fiveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fiveButton" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            app:layout_constraintBottom_toBottomOf="@+id/sixButton"
            app:layout_constraintEnd_toStartOf="@+id/sixButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fourButton"
            app:layout_constraintTop_toTopOf="@+id/sixButton" />

        <Button
            android:id="@+id/sixButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            app:layout_constraintBottom_toBottomOf="@+id/minusButton"
            app:layout_constraintEnd_toStartOf="@+id/minusButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fiveButton"
            app:layout_constraintTop_toTopOf="@+id/minusButton" />

        <Button
            android:id="@+id/oneButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            app:layout_constraintBottom_toBottomOf="@+id/twoButton"
            app:layout_constraintEnd_toStartOf="@+id/twoButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/twoButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/twoButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_constraintBottom_toBottomOf="@+id/threeButton"
            app:layout_constraintEnd_toStartOf="@+id/threeButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintTop_toTopOf="@+id/threeButton" />

        <Button
            android:id="@+id/threeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="@+id/plusButton"
            app:layout_constraintEnd_toStartOf="@+id/plusButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/twoButton"
            app:layout_constraintTop_toTopOf="@+id/plusButton" />

        <Button
            android:id="@+id/nineButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            app:layout_constraintBottom_toBottomOf="@+id/multiplicationButton"
            app:layout_constraintEnd_toStartOf="@+id/multiplicationButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eightButton"
            app:layout_constraintTop_toTopOf="@+id/multiplicationButton" />

        <Button
            android:id="@+id/multiplicationButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nineButton"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/plusButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/threeButton"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.456" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="@+id/dotButton"
            app:layout_constraintEnd_toStartOf="@+id/dotButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dotButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/dotButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginEnd="28dp"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="@+id/equalButton"
            app:layout_constraintEnd_toStartOf="@+id/equalButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zeroButton"
            app:layout_constraintTop_toTopOf="@+id/equalButton" />

        <Button
            android:id="@+id/equalButton"
            android:layout_width="86dp"
            android:layout_height="61dp"
            android:layout_marginEnd="16dp"
            android:text="@string/equal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dotButton"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/minusButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sixButton"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toBottomOf="@+id/divideButton"
            app:layout_constraintEnd_toStartOf="@+id/divideButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/historyButton"
            app:layout_constraintTop_toTopOf="@+id/divideButton" />

        <Button
            android:id="@+id/divideButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/clearButton"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@color/buttonGreen"
            app:layout_constraintBottom_toBottomOf="@+id/clearButton"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clearButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="564dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="459dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="365dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="259dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="167dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>